--- a/Public/Views/Discografía.html
+++ b/Public/Views/Discografía.html
@@ -11,57 +11,59 @@
 <body>
     <!-- Inicio del Header -->
     <header>
-        <nav class="navbar">
-            <a href="../../Index.html">
-                <img id="navbar__image" src="../img/Logo.png" alt="logo de Entre Perros" width="145px">
-            </a>
-            <ul>
-                <li class="navbar__list navbar__tour">
-                    <a class="navbar__items" href="Tour.html">Tour</a>
+        <nav class="navbar flex-row container">
+            <picture>
+                <a href="../../Index.html">
+                <img class="logo" src="../img/Logo.png" alt="logo de Entre Perros" width="145px">
+                </a>
+            </picture>
+            <ul class="menu flex-row">
+                <li class="menu__item">
+                    <a class="menu__link" href="Tour.html">Tour</a>
                 </li>
-                <li class="navbar__list">
-                    <a class="navbar__items" href="Discografía.html">Discografía</a>
+                <li class="menu__item">
+                    <a class="menu__link" href="Discografía.html">Discografía</a>
                 </li>
-                <li class="navbar__list">
-                    <a class="navbar__items" href="Galería.html">Galería</a>
+                <li class="menu__item">
+                    <a class="menu__link" href="Galería.html">Galería</a>
                 </li>
-                <li class="navbar__list">
-                    <a class="navbar__items" href="Contacto.html">Contacto</a>
+                <li class="menu__item">
+                    <a class="menu__link" href="Contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
     </header>
     <!-- Fin del Header -->
-    <main id="main">
+    <main class="main container">
         <h2 class="title__all">Discografía</h2>
         <section>
             <article>
-                <p class="text__description">Escucha más de nuestra música.</p>
+                <p id="text__responsive" class="text__description">Escucha más de nuestra música.</p>
             </article>
-            <div id="iframe__player">
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/20S0GIQ9ZRyRzH58pBfmlf?utm_source=generator&theme=0" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>    
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0Ku9gIXPNNPuj5m2V6wclo?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4eMUaO2bcyXomIyOyUDNOA?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/7wvlp0V3WM98UOGFb2J17n?utm_source=generator" width="250" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            <div  id="grid__music">
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/20S0GIQ9ZRyRzH58pBfmlf?utm_source=generator&theme=0" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>    
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0Ku9gIXPNNPuj5m2V6wclo?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4eMUaO2bcyXomIyOyUDNOA?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/7wvlp0V3WM98UOGFb2J17n?utm_source=generator" width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
             </div>
         </section>
     </main>
-    <footer class="pieDePagina">
-        <a class="pieDePagina__link" href="https://www.instagram.com/entreperros_/" target="_blank">
-            <img class="pieDePagina__image" src="../img/Icon/instagram-logo.png" alt="Instagram" style="width: 50px;">
-        </a>
-        <a class="pieDePagina__link" href="https://es-la.facebook.com/EntrePerrosRock/" target="_blank">
-            <img class="pieDePagina__image" src="../img/Icon/facebook-logo.png" alt="Facebook" style="width: 50px;">
-        </a>
-        <a class="pieDePagina__link" href="https://www.youtube.com/channel/UCUHUxVZeduurLeg3hDQViow" target="_blank">
-            <img class="pieDePagina__image" src="../img/Icon/youtube-logo.png" alt="Youtube" style="width: 50px;">
-        </a>
-        <a class="pieDePagina__link" href="https://open.spotify.com/artist/4gyKdT8HV9uGvCTbRFA04M?si=q_hZ8-HGSDWm3PwPeySgLg" target="_blank">
-           <img class="pieDePagina__image" src="../img/Icon/spotify-logo.png" alt="spotify" style="width: 50px;">
-        </a>
-        <section>    
-            <p class="pieDePagina__derechos">Todos los derechos reservados </p>
-        </section>
+    <footer>
+        <picture class="pieDePagina flex-row container">
+            <a class="pieDePagina__link container" href="https://www.instagram.com/entreperros_/" target="_blank">
+                <img class="pieDePagina__image container" src="../img/Icon/instagram-logo.png" alt="Instagram" style="width: 40px;">
+            </a>
+            <a class="pieDePagina__link container" href="https://es-la.facebook.com/EntrePerrosRock/" target="_blank">
+                <img class="pieDePagina__image container" src="../img/Icon/facebook-logo.png" alt="Facebook" style="width: 40px;">
+            </a>
+            <a class="pieDePagina__link container" href="https://www.youtube.com/channel/UCUHUxVZeduurLeg3hDQViow" target="_blank">
+                <img class="pieDePagina__image container" src="../img/Icon/youtube-logo.png" alt="Youtube" style="width: 40px;">
+            </a>
+            <a class="pieDePagina__link container" href="https://open.spotify.com/artist/4gyKdT8HV9uGvCTbRFA04M?si=q_hZ8-HGSDWm3PwPeySgLg" target="_blank">
+                <img class="pieDePagina__image container" src="../img/Icon/spotify-logo.png" alt="spotify" style="width: 40px;">
+            </a>
+        </picture>
+        <p class="pieDePagina__derechos container">Todos los derechos reservados </p>
     </footer>
 </body>  
 </html>
