--- a/Public/Views/Galería.html
+++ b/Public/Views/Galería.html
@@ -11,55 +11,70 @@
 <body>
     <!-- Comienzo del Header -->
     <header>
-        <nav class="navbar">
-            <a href="../../Index.html">
-                <img id="navbar__image" src="../img/Logo.png" alt="logo de Entre Perros" width="145px">
-            </a>
-            <ul>
-                <li class="navbar__list navbar__tour">
-                    <a class="navbar__items" href="Tour.html">Tour</a>
+        <nav class="navbar flex-row container">
+            <picture>
+                <a href="../../Index.html">
+                <img class="logo" src="../img/Logo.png" alt="logo de Entre Perros" width="145px">
+                </a>
+            </picture>
+            <ul class="menu flex-row">
+                <li class="menu__item">
+                    <a class="menu__link" href="Tour.html">Tour</a>
                 </li>
-                <li class="navbar__list">
-                    <a class="navbar__items" href="Discografía.html">Discografía</a>
+                <li class="menu__item">
+                    <a class="menu__link" href="Discografía.html">Discografía</a>
                 </li>
-                <li class="navbar__list">
-                    <a class="navbar__items" href="Galería.html">Galería</a>
+                <li class="menu__item">
+                    <a class="menu__link" href="Galería.html">Galería</a>
                 </li>
-                <li class="navbar__list">
-                    <a class="navbar__items" href="Contacto.html">Contacto</a>
+                <li class="menu__item">
+                    <a class="menu__link" href="Contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
     </header>
-    </header>
     <!-- Fin del Header -->
-    <main id="main">
+    <main class="main container">
         <h2 class="title__all">Galería</h2>
         <section>
-            <img src="../img/Banda (1).jpg" alt="Imagen de la banda show en vivo" style="width: 300px;"><br>
-            <img src="../img/Banda (10).jpg" alt="Imagen de la banda y el público" style="width: 300px;"><br>
-            <img src="../img/Banda (12).jpg" alt="Imagen de la banda y el público" style="width: 300px;"><br>
-            <img src="../img/Banda (2).jpg" alt="Imagen de una camara filmando a la banda" style="width: 300px;"><br>
-            <img src="../img/Banda (3).jpg" alt="Imagen de la banda tocando con la pantalla de fondo" style="width: 300px;"><br>
-            <img src="../img/Banda (5).jpg" alt="Imagen de la banda con el escenario y el publico de fondo" style="width: 300px;"><br>
+            <div class="flex__gallery">
+                <picture>
+                    <img src="../img/Banda (1).jpg" alt="Imagen de la banda show en vivo">
+                </picture>
+                <picture>
+                    <img src="../img/Banda (10).jpg" alt="Imagen de la banda y el público">
+                </picture>
+                <picture>
+                    <img src="../img/Banda (12).jpg" alt="Imagen de la banda y el público">
+                </picture>
+                <picture>
+                    <img class="imagen4" src="../img/Banda (2).jpg" alt="Imagen de una camara filmando a la banda">
+                </picture>
+                <picture>
+                    <img src="../img/Banda (3).jpg" alt="Imagen de la banda tocando con la pantalla de fondo">
+                </picture>
+                <picture>
+                    <img src="../img/Banda (5).jpg" alt="Imagen de la banda con el escenario y el publico de fondo">
+                </picture>
+            </div>
         </section>
     </main>
-    <footer class="pieDePagina">
-        <a class="pieDePagina__link" href="https://www.instagram.com/entreperros_/" target="_blank">
-            <img class="pieDePagina__image" src="../img/Icon/instagram-logo.png" alt="Instagram" style="width: 50px;">
-        </a>
-        <a class="pieDePagina__link" href="https://es-la.facebook.com/EntrePerrosRock/" target="_blank">
-            <img class="pieDePagina__image" src="../img/Icon/facebook-logo.png" alt="Facebook" style="width: 50px;">
-        </a>
-        <a class="pieDePagina__link" href="https://www.youtube.com/channel/UCUHUxVZeduurLeg3hDQViow" target="_blank">
-            <img class="pieDePagina__image" src="../img/Icon/youtube-logo.png" alt="Youtube" style="width: 50px;">
-        </a>
-        <a class="pieDePagina__link" href="https://open.spotify.com/artist/4gyKdT8HV9uGvCTbRFA04M?si=q_hZ8-HGSDWm3PwPeySgLg" target="_blank">
-           <img class="pieDePagina__image" src="../img/Icon/spotify-logo.png" alt="spotify" style="width: 50px;">
-        </a>
-        <section>    
-            <p class="pieDePagina__derechos">Todos los derechos reservados </p>
-        </section>
+    <footer>
+        <picture class="pieDePagina flex-row container">
+            <a class="pieDePagina__link container" href="https://www.instagram.com/entreperros_/" target="_blank">
+                <img class="pieDePagina__image container" src="../img/Icon/instagram-logo.png" alt="Instagram" style="width: 40px;">
+            </a>
+            <a class="pieDePagina__link container" href="https://es-la.facebook.com/EntrePerrosRock/" target="_blank">
+                <img class="pieDePagina__image container" src="../img/Icon/facebook-logo.png" alt="Facebook" style="width: 40px;">
+            </a>
+            <a class="pieDePagina__link container" href="https://www.youtube.com/channel/UCUHUxVZeduurLeg3hDQViow" target="_blank">
+                <img class="pieDePagina__image container" src="../img/Icon/youtube-logo.png" alt="Youtube" style="width: 40px;">
+            </a>
+            <a class="pieDePagina__link container" href="https://open.spotify.com/artist/4gyKdT8HV9uGvCTbRFA04M?si=q_hZ8-HGSDWm3PwPeySgLg" target="_blank">
+                <img class="pieDePagina__image container" src="../img/Icon/spotify-logo.png" alt="spotify" style="width: 40px;">
+            </a>
+        </picture>
+        <p class="pieDePagina__derechos container">Todos los derechos reservados </p>
     </footer> 
 </body>
 </html>
