--- a/Public/Views/Tour.html
+++ b/Public/Views/Tour.html
@@ -11,76 +11,72 @@
 <body>
     <!-- Inicio del Header -->
     <header>
-        <nav class="navbar">
-            <a href="../../Index.html">
-                <img id="navbar__image" src="../img/Logo.png" alt="logo de Entre Perros" width="145px">
-            </a>
-            <ul>
-                <li class="navbar__list navbar__tour">
-                    <a class="navbar__items" href="Tour.html">Tour</a>
+        <nav class="navbar flex-row container">
+            <picture>
+                <a href="../../Index.html">
+                <img class="logo" src="../img/Logo.png" alt="logo de Entre Perros" width="145px">
+                </a>
+            </picture>
+            <ul class="menu flex-row">
+                <li class="menu__item">
+                    <a class="menu__link" href="Tour.html">Tour</a>
                 </li>
-                <li class="navbar__list">
-                    <a class="navbar__items" href="Discografía.html">Discografía</a>
+                <li class="menu__item">
+                    <a class="menu__link" href="Discografía.html">Discografía</a>
                 </li>
-                <li class="navbar__list">
-                    <a class="navbar__items" href="Galería.html">Galería</a>
+                <li class="menu__item">
+                    <a class="menu__link" href="Galería.html">Galería</a>
                 </li>
-                <li class="navbar__list">
-                    <a class="navbar__items" href="Contacto.html">Contacto</a>
+                <li class="menu__item">
+                    <a class="menu__link" href="Contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
     </header>
     <!-- Fin del Header -->
-    <main id="main">
+    <main class="main container">
         <h2 class="title__all">Tour</h2>
         <section>
-            <table id="table" border cellpadding="15px" cellspacing="7px">
-                <tr>
-                    <th>Lugar</th>
-                    <th>Fecha</th>
-                    <th>Comprar Ticket</th>
-                </tr>
-                <tr>
-                    <td>Club Lucille</td>
-                    <td>28/5</td>
-                    <td>
-                        <a class="tabla__buy" href="https://livepass.com.ar/" target="_blank">Comprar</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>The Roxy</td>
-                    <td>30/7</td>
-                    <td>
-                        <a class="tabla__buy" href="https://livepass.com.ar/" target="_blank">Comprar</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>La Trastienda</td>
-                    <td>10/10</td>
-                    <td>
-                        <a class="tabla__buy" href="https://livepass.com.ar/" target="_blank">Comprar</a>
-                    </td>
-                </tr>
-            </table>
+            <article>
+                <p id="text__responsive" class="text__description">Conocé nuestro Tour</p>
+            </article>
         </section>
+        <section class="container">
+            <ul id="grid__tour">
+                <li class="lugar1">LUGAR</li>
+                <li class="fecha1">FECHA</li>
+                <li class="comprar1">TICKETS</li>
+                <li class="lugar2">Club Lucille</li>
+                <li class="fecha2">28/05</li>
+                <li class="comprar2">COMPRAR</li>
+                    <a class="comprar2" href="https://livepass.com.ar" target="_blank">COMPRAR</a>
+                <li class="lugar3">The Roxy</li>
+                <li class="fecha3">30/07</li>
+                <li class="comprar3">COMPRAR</li>
+                    <a class="comprar3" href="https://livepass.com.ar" target="_blank">COMPRAR</a>
+                <li class="lugar4">La Trastienda</li>
+                <li class="fecha4">10/10</li>
+                <li class="comprar4">COMPRAR</li>
+                    <a class="comprar4" href="https://livepass.com.ar" target="_blank">COMPRAR</a>    
+            </ul>
+            </section>
     </main>
-    <footer class="pieDePagina">
-        <a class="pieDePagina__link" href="https://www.instagram.com/entreperros_/" target="_blank">
-            <img class="pieDePagina__image" src="../img/Icon/instagram-logo.png" alt="Instagram" style="width: 50px;">
-        </a>
-        <a class="pieDePagina__link" href="https://es-la.facebook.com/EntrePerrosRock/" target="_blank">
-            <img class="pieDePagina__image" src="../img/Icon/facebook-logo.png" alt="Facebook" style="width: 50px;">
-        </a>
-        <a class="pieDePagina__link" href="https://www.youtube.com/channel/UCUHUxVZeduurLeg3hDQViow" target="_blank">
-            <img class="pieDePagina__image" src="../img/Icon/youtube-logo.png" alt="Youtube" style="width: 50px;">
-        </a>
-        <a class="pieDePagina__link" href="https://open.spotify.com/artist/4gyKdT8HV9uGvCTbRFA04M?si=q_hZ8-HGSDWm3PwPeySgLg" target="_blank">
-           <img class="pieDePagina__image" src="../img/Icon/spotify-logo.png" alt="spotify" style="width: 50px;">
-        </a>
-        <section>    
-            <p class="pieDePagina__derechos">Todos los derechos reservados </p>
-        </section>
+    <footer>
+        <picture class="pieDePagina flex-row container">
+            <a class="pieDePagina__link container" href="https://www.instagram.com/entreperros_/" target="_blank">
+                <img class="pieDePagina__image container" src="../img/Icon/instagram-logo.png" alt="Instagram" style="width: 40px;">
+            </a>
+            <a class="pieDePagina__link container" href="https://es-la.facebook.com/EntrePerrosRock/" target="_blank">
+                <img class="pieDePagina__image container" src="../img/Icon/facebook-logo.png" alt="Facebook" style="width: 40px;">
+            </a>
+            <a class="pieDePagina__link container" href="https://www.youtube.com/channel/UCUHUxVZeduurLeg3hDQViow" target="_blank">
+                <img class="pieDePagina__image container" src="../img/Icon/youtube-logo.png" alt="Youtube" style="width: 40px;">
+            </a>
+            <a class="pieDePagina__link container" href="https://open.spotify.com/artist/4gyKdT8HV9uGvCTbRFA04M?si=q_hZ8-HGSDWm3PwPeySgLg" target="_blank">
+                <img class="pieDePagina__image container" src="../img/Icon/spotify-logo.png" alt="spotify" style="width: 40px;">
+            </a>
+        </picture>
+        <p class="pieDePagina__derechos container">Todos los derechos reservados </p>
     </footer>
 </body>
 </html>
