--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,9 @@
     --font-primary: 'Roboto', sans-serif;
     --text-lg: 2em;
     --text-md: 1.6em;
+    --text-md-sm: 1em;
+    --text-small: 0.5em;
+
 }
 
 /* Reset */
@@ -67,10 +70,10 @@ header {
 }
 
 header .navbar {
-    max-height: 10vh;
     justify-content: space-between;
     align-items: center;
     padding: 0rem 2rem;
+    position: static;
 }
 
 header .logo {
@@ -99,13 +102,18 @@ header .menu__item {
 
 
 
+
 /* Main */
 
-#main { 
+.main { 
     min-height: 80vh;
     font-family: var(--font-primary);
 }
 
+article .text__description {
+    text-align: left;
+    font-size: var(--text-md);
+}
 .title {
     text-transform: uppercase;  
     font-weight: 900;
@@ -118,48 +126,281 @@ header .menu__item {
     font-size: 62px;
 }
 
-.flex-row .text {
+.flex-row .text__description {
     font-size: var(--text-md);
     text-align: left;
-    padding: 2rem;
-    align-items: center; 
+    padding: 2rem 2rem 0 0;
+    align-items: center;
+    line-height: 3rem; 
 }
+
+div .iframe {
+    width: 100%;
+    }
 
 .flex-row .iframe .iframe__video {
-    padding: 2rem;        
+    padding: 2rem 2rem 0 0;
+}
+
+#grid__tour {
+    display: grid;
+    grid-template-areas: 
+    "Lugar1 Fecha1 Comprar1"
+    "Lugar2 Fecha2 Comprar2"
+    "Lugar3 Fecha3 Comprar3"
+    "Lugar4 Fecha4 Comprar4";
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr; 
+    font-size: var(--text-md);
+    margin-top: 2em;
+    gap: 2em; 
+    justify-items: center;
+    line-height: 1.8em;
+}
+
+ul .lugar1 {
+    grid-area: Lugar1;
+}
+
+ul .fecha1 {
+    grid-area: Fecha1;
+}
+
+ul .comprar1 {
+    grid-area: Comprar1;
+}
+
+ul .lugar2 {
+    grid-area: Lugar2;
+}
+
+ul .fecha2 {
+    grid-area: Fecha2;
+}
+
+ul .comprar2 {
+    grid-area: Comprar2;
+    background-color: var(--secondary);
+    color: var(--principal);
+    border-radius: 0.6em;
+    width: 50%;
+    text-align: center;
+}
+
+ul .lugar3 {
+    grid-area: Lugar3;
+}
+
+ul .fecha3 {
+    grid-area: Fecha3;
+}
+
+ul .comprar3 {
+    grid-area: Comprar3;
+    background-color: var(--secondary);
+    color: var(--principal);
+    border-radius: 0.6em;
+    width: 50%;
+    text-align: center;
+}
+
+ul .lugar4 {
+    grid-area: Lugar4;
+}
+
+ul .fecha4 {
+    grid-area: Fecha4;
+}
+
+ul .comprar4 {
+    grid-area: Comprar4;
+    background-color: var(--secondary);
+    color: var(--principal);
+    border-radius: 0.6em;
+    width: 50%;
+    text-align: center;
+}
+
+a .comprar4:hover {
+    background-color: #616161;
+}
+
+a .comprar {
+    transition: background-color 3s ease-in-out;
+}
+
+#grid__music {
+    display: grid;
+    grid-template-areas: "iframe1 iframe2 iframe3 iframe4";
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    align-items: center;
+    justify-items: center;
 }
 
 
-/* #table {
-    display: inline-block;
+.flex__gallery {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+    gap: 1.5em;
 }
 
-.tabla__buy {
-    text-decoration: none;
-    color: black;
+div picture img {
+        width: 100%;
+        height: 20em;
+        
+    }
+
+.flex__gallery2 {
+    display: flex;
+      
 }
+
+
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2em;
+    font-size: var(--text-md);
+    background-color: #cfcfcfc5;
+    border-radius: 1em;
+    line-height: 2em;
+    max-width: 18em;
+    margin-left: 25em;
+
+}
+
+
+
 
 /* Footer */
 
-footer {
-    background-color: var(--secondary);
-    min-height: 10vh;
+footer .pieDePagina .flex-row {
+    background-color: var(--principal);
+    justify-content: space-between;
 }
 
-.pieDePagina .flex-row .container {   
-    font-family: var(--font-primary);
+footer p {
     text-align: center;
+}
+
+
+/* Responsive */
+
+@media screen and  (max-width: 720px) {
+    .title {   
+        text-align: center;
+        font-size: 4em;
+    }
+
+    .title__all {
+        font-size: 4em;
+        text-align: center;
+    }
+
+    #text__responsive {
+        
+        text-align: center;
+    }
+
+    .column-responsive {
+        display: flex;
+        flex-direction: column;
+        padding: 3em;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #form__responsive {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-left: 10em;
+    }
+
 
 }
 
-/* .pieDePagina__link {
-    display: flex
+@media screen and (max-width: 480px) {
+  
+    .menu {
+        font-size: 0.7em;
+    }
+
+    .logo {
+        width: 100%;
+    }
+
+    .title {
+        font-size: 3em;
+        text-align: center;
+    }
+
+    .title__all {
+        font-size: 3em;
+        text-align: center  ;
+    }
+
+    #text__responsive {
+
+        text-align: center;
+    }
+    
+    .text__description {
+        font-size:var(--text-small);
+        line-height: 2em;
+    }
+
+    .column-responsive {
+        display: flex;
+        flex-direction: column;
+        padding: 2em;
+    }
+    
+    .iframe__video {
+        width: 100%;
+    }
+
+    footer {
+        min-height: fit-content;
+    }
+
+
+    #grid__music {
+        display: grid;
+        grid-template-areas: 
+        "iframe1 iframe2"
+        "iframe3 iframe4";
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        column-gap: 1rem;
+        row-gap: 1rem;
+        align-items: center;
+    }
+
+    
+    #grid__tour {
+        font-size: var(--text-md-sm);
+        line-height: 5em;
+    }
+
+    ul li .comprar3{
+        width: 60%;
+    }    
+
+    #form__responsive {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        margin: 1.8em;
+    }
+
 }
-
-.pieDePagina__image {
-    display: inline-block;
-} */
-
-
 
 
