--- a/Public/Views/discografia.html
+++ b/Public/Views/discografia.html
@@ -19,16 +19,16 @@
             </picture>
             <ul class="menu flex-row">
                 <li class="menu__item">
-                    <a class="menu__link" href="Tour.html">Tour</a>
+                    <a class="menu__link" href="tour.html">Tour</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="Discografía.html">Discografía</a>
+                    <a class="menu__link" href="discografía.html">Discografía</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="Galería.html">Galería</a>
+                    <a class="menu__link" href="galería.html">Galería</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="Contacto.html">Contacto</a>
+                    <a class="menu__link" href="contacto.html">Contacto</a>
                 </li>
             </ul>
         </nav>
