--- a/Public/Views/discografia.html
+++ b/Public/Views/discografia.html
@@ -22,10 +22,10 @@
                     <a class="menu__link" href="tour.html">Tour</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="discografía.html">Discografía</a>
+                    <a class="menu__link" href="discografia.html">Discografía</a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="galería.html">Galería</a>
+                    <a class="menu__link" href="galeria.html">Galería</a>
                 </li>
                 <li class="menu__item">
                     <a class="menu__link" href="contacto.html">Contacto</a>
