--- a/Public/Views/discografia.html
+++ b/Public/Views/discografia.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar flex-row container">
             <picture>
-                <a href="../../Index.html">
+                <a href="../../index.html">
                 <img class="logo" src="../img/Logo.png" alt="logo de Entre Perros" width="145px">
                 </a>
             </picture>
