--- a/css/index.css
+++ b/css/index.css
@@ -290,6 +290,8 @@ footer p {
 }
 
 
+
+
 /* Responsive */
 
 @media screen and  (max-width: 720px) {
@@ -405,3 +407,50 @@ footer p {
 }
 
 
+
+/* Animaciones */
+
+.zoom {
+    transition: transform ease-in-out 1s;
+}
+
+.zoom:hover {
+    transform: scale(1.15);
+}
+
+.comprar__tickets {
+    transition: transform ease-in-out .8s;
+
+}
+
+.comprar__tickets:hover {
+    transform: scale(1.25);
+}
+
+.zoom__tickets {
+    transition: transform ease-in-out 0.8s;
+}
+
+.zoom__redes {
+    transition: transform ease-in-out 0.8s;
+}
+
+.zoom__redes:hover {
+    transform: scale(1.25);
+}
+
+.show {
+    animation: show 0.8s ease-in-out;
+}
+
+@keyframes show {
+    0% {
+        transform: scale(1, 1);
+    }
+    50% {
+        transform: scale(1.5, 1.5);
+    }
+    100% {
+        transform: scale(1, 1);
+    }
+}
