--- a/Public/Views/tour.html
+++ b/Public/Views/tour.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/index.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../img/Icon/favicon.ico" type="image/x-icon">
@@ -12,73 +13,91 @@
 <body>
     <!-- Inicio del Header -->
     <header>
-        <nav class="navbar flex-row container">
-            <picture>
-                <a href="../../index.html">
-                <img class="logo zoom" src="../img/Logo.png" alt="logo de Entre Perros" width="145px">
+        <nav class="navbar navbar-expand-lg navbar-light bg-black contenedor p-3">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../../index.html  ">
+                    <img class="zoom" src="../img/Logo.png" alt="Logo de la Banda Entre Perros" width="125px">
                 </a>
-            </picture>
-            <ul class="menu flex-row">
-                <li class="menu__item">
-                    <a class="menu__link" href="tour.html">Tour</a>
-                </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="discografia.html">Discografía</a>
-                </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="galeria.html">Galería</a>
-                </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="contacto.html">Contacto</a>
-                </li>
-            </ul>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>           
+                <div class="collapse navbar-collapse contenedor justify-content-end " id="navbarNav">
+                    <ul class="navbar-nav menu">
+                        <li class="nav-item menu__item">
+                            <a class="nav-link menu__link active" aria-current="page" href="./tour.html">Tour</a>
+                        </li>
+                        <li class="nav-item menu__item   active">
+                            <a class="nav-link menu__link  active" aria-current="page" href="./discografia.html">Discografía</a>
+                        </li>
+                        <li class="nav-item menu__item ">
+                            <a class="nav-link menu__link  active" aria-current="page" href="./galeria.html">Galería</a>
+                        </li>
+                        <li class="nav-item menu__item ">
+                            <a class="nav-link menu__link  active" aria-current="page" href="./contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <!-- Fin del Header -->
-    <main class="main container">
+    <main class="main contenedor">
         <h2 data-aos="fade-right" data-aos-duration="1500" class="title__all">Tour</h2>
         <section>
             <article>
                 <p data-aos="fade-right" data-aos-duration="1500" id="text__responsive" class="text__description">Conocé nuestro Tour</p>
             </article>
         </section>
-        <section data-aos="fade-right" data-aos-duration="1500" class="container">
-            <ul id="grid__tour">
-                <li class="lugar1">LUGAR</li>
-                <li class="fecha1">FECHA</li>
-                <li class="comprar1">TICKETS</li>
-                <li class="lugar2">Club Lucille</li>
-                <li class="fecha2">28/05</li>
-                <li class="comprar2">COMPRAR</li>
-                    <a class="comprar2 comprar__tickets show" href="https://livepass.com.ar" target="_blank">COMPRAR</a>
-                <li class="lugar3">The Roxy</li>
-                <li class="fecha3">30/07</li>
-                <li class="comprar3">COMPRAR</li>
-                    <a class="comprar3 comprar__tickets show" href="https://livepass.com.ar" target="_blank">COMPRAR</a>
-                <li class="lugar4">La Trastienda</li>
-                <li class="fecha4">10/10</li>
-                <li class="comprar4">COMPRAR</li>
-                    <a class="comprar4 comprar__tickets show" href="https://livepass.com.ar" target="_blank">COMPRAR</a>    
-            </ul>
-            </section>
+        <section data-aos="fade-right" data-aos-duration="1500" class="text__tour">
+            <div class="bg-light border-bottom border-dark p-3 text-center">
+                <ul class="row contenedor ">    
+                    <li class="col-4">LUGAR</li>
+                    <li class="col-4">FECHA</li>
+                    <li class="col-4">COMPRAR</li>
+                </ul>
+            </div>
+            <div class="bg-light border-bottom border-dark p-3 text-center">
+                <ul class="row contenedor">    
+                    <li class="col-4">Club Lucille</li>
+                    <li class="col-4">28/05</li>
+                    <li class="col-4 caja__texto zoom"><a class="col-4 comprar2 comprar__tickets show" href="https://livepass.com.ar" target="_blank">Comprar</a></li>
+                        
+                </ul>
+            </div>
+            <div class="bg-light border-bottom border-dark p-3 text-center">
+                <ul class="row contenedor">
+                    <li class="col-4">The Roxy</li>
+                    <li class="col-4">30/07</li>                  
+                    <li class="col-4 caja__texto zoom"><a class="col-4 comprar3 comprar__tickets show" href="https://livepass.com.ar" target="_blank">Comprar</a></li>
+                </ul>
+            </div>
+            <div class="bg-light border-bottom border-dark p-3 text-center">
+                <ul class="row contenedor">
+                    <li class="col-4">La Trastienda</li>
+                    <li class="col-4">10/10</li>
+                    <li class="col-4 caja__texto zoom"><a class="col-4 comprar4 comprar__tickets show " href="https://livepass.com.ar" target="_blank">Comprar</a></li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer>
-        <picture class="pieDePagina flex-row container">
-            <a class="pieDePagina__link container" href="https://www.instagram.com/entreperros_/" target="_blank">
-                <img class="pieDePagina__image container zoom__redes" src="../img/Icon/instagram-logo.png" alt="Instagram" style="width: 40px;">
+        <picture id="flex-row" class="pieDePagina flex-row contenedor">
+            <a class="pieDePagina__link contenedor" href="https://www.instagram.com/entreperros_/" target="_blank">
+                <img class="pieDePagina__image contenedor zoom__redes" src="../img/Icon/instagram-logo.png" alt="Instagram" style="width: 40px;">
             </a>
-            <a class="pieDePagina__link container" href="https://es-la.facebook.com/EntrePerrosRock/" target="_blank">
-                <img class="pieDePagina__image container zoom__redes" src="../img/Icon/facebook-logo.png" alt="Facebook" style="width: 40px;">
+            <a class="pieDePagina__link contenedor" href="https://es-la.facebook.com/EntrePerrosRock/" target="_blank">
+                <img class="pieDePagina__image contenedor zoom__redes" src="../img/Icon/facebook-logo.png" alt="Facebook" style="width: 40px;">
             </a>
-            <a class="pieDePagina__link container" href="https://www.youtube.com/channel/UCUHUxVZeduurLeg3hDQViow" target="_blank">
-                <img class="pieDePagina__image container zoom__redes" src="../img/Icon/youtube-logo.png" alt="Youtube" style="width: 40px;">
+            <a class="pieDePagina__link contenedor" href="https://www.youtube.com/channel/UCUHUxVZeduurLeg3hDQViow" target="_blank">
+                <img class="pieDePagina__image contenedor zoom__redes" src="../img/Icon/youtube-logo.png" alt="Youtube" style="width: 40px;">
             </a>
-            <a class="pieDePagina__link container" href="https://open.spotify.com/artist/4gyKdT8HV9uGvCTbRFA04M?si=q_hZ8-HGSDWm3PwPeySgLg" target="_blank">
-                <img class="pieDePagina__image container zoom__redes" src="../img/Icon/spotify-logo.png" alt="spotify" style="width: 40px;">
+            <a class="pieDePagina__link contenedor" href="https://open.spotify.com/artist/4gyKdT8HV9uGvCTbRFA04M?si=q_hZ8-HGSDWm3PwPeySgLg" target="_blank">
+                <img class="pieDePagina__image contenedor zoom__redes" src="../img/Icon/spotify-logo.png" alt="spotify" style="width: 40px;">
             </a>
         </picture>
-        <p class="pieDePagina__derechos container">Todos los derechos reservados </p>
+        <p class="pieDePagina__derechos contenedor">Todos los derechos reservados </p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
