Se agregro Bootstrap y se corrigió el form v2

--- a/Public/Views/contacto.html
+++ b/Public/Views/contacto.html
@@ -59,13 +59,10 @@
                   <input type="email" class="input-lg form-control" id="inputEmail3" placeholder="Tu Email">
                 </div>
             </div>
-            <div class="m-1 p-6 col-lg-6 justify-content-end ">
-                <label for="floatingTextarea">Escribí tu mensaje</label>
-                <div class="form-floating ">
-                    <textarea class="form-control " placeholder="Dejanos tu mensaje" id="floatingTextarea" rows="50"></textarea>
-                    <label for="floatingTextarea">Tu mensaje</label>
-                </div>
-            </div>
+            <div class="m-1 p-2 col-lg-6 justify-content-center">
+                <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu mensaje</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
             <div class="col-lg-6 p-6 justify-content-center">
                 <input class="p-6 btn btn-primary m-1 input-lg " type="submit" value="Enviar">
                 <input class="p-6 btn btn-primary m-1 input-lg" type="reset" value="Limpiar formulario">
