--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -3,9 +3,10 @@ footer {
         text-align: center;
     }
     .pieDePagina {
-          
+        
         background-color: $principal;
         justify-content: space-between;
+        @include flex-row;
     }
 }
 
