--- a/Public/Views/contacto.html
+++ b/Public/Views/contacto.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="banda, rock, contacto, banda de rock, musica, entre perros, gba oeste, indie, independiente, rock and roll">
+    <meta name="description" content="Entre Perros es una banda de rock de Palomar, Argentina.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/main.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../img/Icon/favicon.ico" type="image/x-icon">
-    <title>Entre Perros - Contacto</title>   
+    <title>Entre Perros | Dejanos un mensaje - Contacto</title>   
 </head>
 <body>
     <!-- Comienzo del Header -->
@@ -32,7 +34,7 @@
                         <li class="nav-item menu__item ">
                             <a class="nav-link menu__link  active" aria-current="page" href="./galeria.html">Galería</a>
                         </li>
-                        <li class="nav-item menu__item ">
+                        <li class="nav-item menu__item--active ">
                             <a class="nav-link menu__link  active" aria-current="page" href="./contacto.html">Contacto</a>
                         </li>
                     </ul>
@@ -45,7 +47,7 @@
         <h2 data-aos="fade-right" data-aos-duration="1500" class="title__all">Contacto</h2>
         <section>
             <article>
-                <p data-aos="fade-right" data-aos-duration="1500" id="text__responsive" class="text__description">Dejanos tu mensaje, nos comunicaremos a la brevedad.</p>
+                <p data-aos="fade-right" data-aos-duration="1500" id="text__responsive" class="contenedor text__description">Dejanos tu mensaje, nos comunicaremos a la brevedad.</p>
             </article>
         </section>
         <form class="form p-6 row contenedor col-lg-6 bg-light bg-gradient rounded justify-content-center">
