--- a/Public/Views/discografia.html
+++ b/Public/Views/discografia.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="banda, spotify, rock, banda de rock, musica, entre perros, gba oeste, indie, independiente, rock and roll">
+    <meta name="description" content="Acá podes escuchar toda la música de Entre Perros.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
     <link rel="stylesheet" href="../../css/main.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../img/Icon/favicon.ico" type="image/x-icon">
-    <title>Entre Perros - Discografía</title>
+    <title>Entre Perros | Escuchá nuestra música - Discografía</title>
 </head>
 <body>
     <!-- Inicio del Header -->
@@ -26,7 +28,7 @@
                         <li class="nav-item menu__item">
                             <a class="nav-link menu__link active" aria-current="page" href="./tour.html">Tour</a>
                         </li>
-                        <li class="nav-item menu__item   active">
+                        <li class="nav-item menu__item--active active">
                             <a class="nav-link menu__link  active" aria-current="page" href="./discografia.html">Discografía</a>
                         </li>
                         <li class="nav-item menu__item ">
@@ -45,18 +47,18 @@
         <h2 data-aos="fade-right" data-aos-duration="1500" class="title__all">Discografía</h2>
         <section>
             <article>
-                <p data-aos="fade-right" data-aos-duration="1500" id="text__responsive" class="text__description">Escucha más de nuestra música.</p>
+                <p data-aos="fade-right" data-aos-duration="1500" class="row contenedor text__description">Escucha más de nuestra música.</p>
             </article>
-            <div class="row container-fluid">
-                <iframe class="col-lg-3 col-md-6 col-sm-6 p-1" style="border-radius:12px" src="https://open.spotify.com/embed/track/20S0GIQ9ZRyRzH58pBfmlf?utm_source=generator&theme=0" width="100%" height="360" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>    
-                <iframe class="col-lg-3 col-md-6 col-sm-6 p-1" style="border-radius:12px" src="https://open.spotify.com/embed/track/0Ku9gIXPNNPuj5m2V6wclo?utm_source=generator" width="100%" height="360" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <iframe class="col-lg-3 col-md-6 col-sm-6 p-1" style="border-radius:12px" src="https://open.spotify.com/embed/album/4eMUaO2bcyXomIyOyUDNOA?utm_source=generator" width="100%" height="360" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-                <iframe class="col-lg-3 col-md-6 col-sm-6 p-1" style="border-radius:12px" src="https://open.spotify.com/embed/album/7wvlp0V3WM98UOGFb2J17n?utm_source=generator" width="100%" height="360" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-            </div>
         </section>
+        <div class="row container-fluid">
+            <iframe class="col-lg-3 col-md-6 col-sm-6 p-1" style="border-radius:12px" src="https://open.spotify.com/embed/track/20S0GIQ9ZRyRzH58pBfmlf?utm_source=generator&theme=0" width="100%" height="360" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>    
+            <iframe class="col-lg-3 col-md-6 col-sm-6 p-1" style="border-radius:12px" src="https://open.spotify.com/embed/track/0Ku9gIXPNNPuj5m2V6wclo?utm_source=generator" width="100%" height="360" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            <iframe class="col-lg-3 col-md-6 col-sm-6 p-1" style="border-radius:12px" src="https://open.spotify.com/embed/album/4eMUaO2bcyXomIyOyUDNOA?utm_source=generator" width="100%" height="360" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+            <iframe class="col-lg-3 col-md-6 col-sm-6 p-1" style="border-radius:12px" src="https://open.spotify.com/embed/album/7wvlp0V3WM98UOGFb2J17n?utm_source=generator" width="100%" height="360" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+        </div>
     </main>
     <footer>
-        <picture id="flex-row" class="pieDePagina flex-row contenedor">
+        <picture class="pieDePagina flex-row contenedor">
             <a class="pieDePagina__link contenedor" href="https://www.instagram.com/entreperros_/" target="_blank">
                 <img class="pieDePagina__image contenedor zoom__redes" src="../img/Icon/instagram-logo.png" alt="Instagram" style="width: 40px;">
             </a>
