--- a/Public/Views/galeria.html
+++ b/Public/Views/galeria.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="banda, rock, banda de rock, fotos, galeria, musica, entre perros, gba oeste, indie, independiente, rock and roll">
+    <meta name="description" content="Entre Perros es una banda de rock de Palomar, Argentina. Mira las fotos de la banda">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">   
     <link rel="stylesheet" href="../../css/main.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../img/Icon/favicon.ico" type="image/x-icon">
-    <title>Entre perros - Galería</title>
+    <title>Entre Perros | Mira nuestras fotos - Galería</title>
 </head>
 <body>
     <!-- Comienzo del Header -->
@@ -29,7 +31,7 @@
                         <li class="nav-item menu__item   active">
                             <a class="nav-link menu__link  active" aria-current="page" href="./discografia.html">Discografía</a>
                         </li>
-                        <li class="nav-item menu__item ">
+                        <li class="nav-item menu__item--active ">
                             <a class="nav-link menu__link  active" aria-current="page" href="./galeria.html">Galería</a>
                         </li>
                         <li class="nav-item menu__item ">
