--- a/Public/Views/tour.html
+++ b/Public/Views/tour.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="banda, rock, tour, fechas, lugares, banda de rock, musica, entre perros, gba oeste, indie, independiente, rock and roll">
+    <meta name="description" content="Entre Perros es una banda de rock de Palomar, Argentina. Conocé más sobre nuestro Tour.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/main.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" href="../img/Icon/favicon.ico" type="image/x-icon">
-    <title>Entre Perros - Tour</title>
+    <title>Entre Perros | Conocé más de nuestras fechas - Tour</title>
 </head>
 <body>
     <!-- Inicio del Header -->
@@ -23,7 +25,7 @@
                 </button>           
                 <div class="collapse navbar-collapse contenedor justify-content-end " id="navbarNav">
                     <ul class="navbar-nav menu">
-                        <li class="nav-item menu__item">
+                        <li class="nav-item menu__item--active">
                             <a class="nav-link menu__link active" aria-current="page" href="./tour.html">Tour</a>
                         </li>
                         <li class="nav-item menu__item   active">
@@ -42,13 +44,13 @@
     </header>
     <!-- Fin del Header -->
     <main class="main contenedor">
-        <h2 data-aos="fade-right" data-aos-duration="1500" class="title__all">Tour</h2>
+        <h2 data-aos="fade-right" data-aos-duration="1500" class="contenedor title__all">Tour</h2>
         <section>
             <article>
-                <p data-aos="fade-right" data-aos-duration="1500" id="text__responsive" class="text__description">Conocé nuestro Tour</p>
+                <p data-aos="fade-right" data-aos-duration="1500" id="text__responsive" class="row contenedor text__description">Conocé nuestro Tour</p>
             </article>
         </section>
-        <section data-aos="fade-right" data-aos-duration="1500" class="text__tour">
+        <section data-aos="fade-right" data-aos-duration="1500" class="row text__tour">
             <div class="bg-light border-bottom border-dark p-3 text-center">
                 <ul class="row contenedor ">    
                     <li class="col-4">LUGAR</li>
@@ -60,8 +62,7 @@
                 <ul class="row contenedor">    
                     <li class="col-4">Club Lucille</li>
                     <li class="col-4">28/05</li>
-                    <li class="col-4 caja__texto zoom"><a class="col-4 comprar2 comprar__tickets show" href="https://livepass.com.ar" target="_blank">Comprar</a></li>
-                        
+                    <li class="col-4 caja__texto zoom"><a class="col-4 comprar2 comprar__tickets show" href="https://livepass.com.ar" target="_blank">Comprar</a></li>   
                 </ul>
             </div>
             <div class="bg-light border-bottom border-dark p-3 text-center">
