--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -1,7 +1,7 @@
 header {
-
     background-color:$secondary;
-
+    
+    
     .navbar-toggler {
         padding: .25rem .75rem;
         font-size: 1.25rem;
@@ -11,16 +11,27 @@ header {
         border-radius: .25rem;
         transition: box-shadow .15s ease-in-out;
         color: $principal;
+        
     }
 
     
     .menu {
         flex-basis: 50%;
         justify-content: space-between;
+        
+        
+        
 
         &__item {
             border: 2px solid $secondary;
             transition: border-color .4s ease-in-out;
+            
+             
+            
+            &--active {
+                @extend .menu__item;
+                border-bottom: 2px solid $principal;
+            }
 
             &:hover {
                 border-color: $principal;
