--- a/sass/views/_discografia.scss
+++ b/sass/views/_discografia.scss
@@ -1,13 +1,114 @@
 /* Discografia */
 
-main {
+.main {
+    
     font-family: $font-primary;
     min-height: 80vh;
-     
-    .title__all {
-        text-transform: uppercase;
-        font-weight: 900;
-        
-    }
+    
+    
+        .title__all {
+            text-transform: uppercase;
+            font-weight: 900;
+            
+        }
+      
+        .text__description {
+            
+            font-size: $text-md;
+            text-align: left;
+            line-height: 3rem;  
+            
+        }
+       
+                
 }
+/* Responsive */
 
+@media screen and  (max-width: 720px) {
+    
+
+    main {    
+        .title {   
+            text-align: center;
+            font-size: map-get($text-sizes , xlg )
+        }
+        
+        #text__responsive {
+            
+            text-align: center;
+        }
+    }
+        .menu {
+            font-size: .8em;
+            flex-basis: 30%;
+        }
+    
+    
+        
+    
+        .column-responsive {
+            display: flex;
+            flex-direction: column;
+            padding: 1em;
+            align-items: center;
+            justify-content: center;
+        }
+    
+            
+    }
+    
+    @media screen and (max-width: 480px) {
+     
+    nav {
+        .logo {
+            max-width: 40%;
+            flex-basis:5%;
+        }
+        .menu {
+            font-size: 0.7em;
+        }
+    
+    }
+    
+    main{
+        .title {
+            font-size: 2.5em;
+            text-align: center;
+        }
+    
+        .title__all {
+            font-size: 2em;
+            text-align: center  ;
+        }
+        .text__description {
+            font-size: map-get($text-sizes, sm );
+            line-height: 1.5em;
+        }
+    
+    
+    }
+        .menu {
+            font-size: 0.7em;
+        }
+    
+        #text__responsive {
+    
+            text-align: justify;
+        }
+        
+        
+    
+        .column-responsive {
+            display: flex;
+            flex-direction: column;
+            padding: 2em;
+        }
+        
+        .iframe__video {
+            width: 100%;
+        }
+    
+        footer {
+            min-height: fit-content;
+        }
+    }    
