--- a/sass/views/_tour.scss
+++ b/sass/views/_tour.scss
@@ -3,15 +3,18 @@
 main {
     font-family: $font-primary;
     min-height: 80vh;
+    
      
     .title__all {
         text-transform: uppercase;
         font-weight: 900;
         font-size: 62px;
+       
      
         
     }
     article {
+        
         .text__description {
             font-size: $text-md;
             text-align: left;
@@ -23,6 +26,7 @@ main {
     
     .text__tour {
         font-size: $text-md;
+        @include flex-row;
     }
     
     .caja__texto {
@@ -31,6 +35,7 @@ main {
     }
 
     ul li {
+
         list-style-type: none;
             
     }
@@ -43,6 +48,8 @@ main {
             width: 100%;
             text-align: center;
         }
+        
+            
         .comprar3 {
             background-color:$secondary;
             color: $principal;
@@ -61,30 +68,113 @@ main {
     }
 }
 
+/* Responsive */
+
 @media screen and  (max-width: 720px) {
     
 
     main {    
+        .title {   
+            text-align: center;
+            font-size: 3em;
+        }
         .title__all {
             font-size: 4em;
             text-align: center;
         }
+        #text__responsive {
+            
+            text-align: center;
+        }
     }
-}
-
-@media screen and (max-width: 480px) {
-
-
+        .menu {
+            font-size: .8em;
+            flex-basis: 30%;
+        }
+    
+    
+        
+    
+        .column-responsive {
+            display: flex;
+            flex-direction: column;
+            padding: 1em;
+            align-items: center;
+            justify-content: center;
+        }
+    
+            
+    }
+    
+    @media screen and (max-width: 480px) {
+     
+    nav {
+        .logo {
+            max-width: 40%;
+            flex-basis:5%;
+        }
+        .menu {
+            font-size: 0.7em;
+        }
+    
+    }
+    
     main{
-          
+        .title {
+            font-size: 2.5em;
+            text-align: center;
+        }
+    
         .title__all {
             font-size: 2em;
             text-align: center  ;
         }
         .text__description {
-            font-size:$text-small;
+            font-size: map-get($text-sizes, sm );
             line-height: 1.5em;
         }
-
+    
+    
     }
-}
+        .menu {
+            font-size: 0.7em;
+        }
+    
+        
+    
+        
+    
+        #text__responsive {
+    
+            text-align: justify;
+        }
+        
+        
+    
+        .column-responsive {
+            display: flex;
+            flex-direction: column;
+            padding: 2em;
+        }
+        
+        .iframe__video {
+            width: 100%;
+        }
+    
+        footer {
+            min-height: fit-content;
+        }
+    
+    
+       
+    
+        ul li .comprar3{
+            width: 60%;
+        }    
+    
+        
+    
+    }
+    
+    
+    
