Se aghrego SASS II + CEO v2

--- a/Public/Views/tour.html
+++ b/Public/Views/tour.html
@@ -82,7 +82,7 @@
         </section>
     </main>
     <footer>
-        <picture id="flex-row" class="pieDePagina flex-row contenedor">
+        <picture id="flex-row" class="pieDePagina  contenedor">
             <a class="pieDePagina__link contenedor" href="https://www.instagram.com/entreperros_/" target="_blank">
                 <img class="pieDePagina__image contenedor zoom__redes" src="../img/Icon/instagram-logo.png" alt="Instagram" style="width: 40px;">
             </a>
