Tercera entrega de proyecto v1

--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -19,7 +19,8 @@ main {
             font-size: $text-md;
             text-align: left;
             align-items: center;
-            line-height: 3rem; 
+            line-height: 2rem; 
+            padding-right: 1rem;
             
             
         }
