--- a/sass/views/_tour.scss
+++ b/sass/views/_tour.scss
@@ -27,6 +27,7 @@ main {
     .text__tour {
         font-size: $text-md;
         @include flex-row;
+        align-items: center;
     }
     
     .caja__texto {
