--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,8 @@ main {
     font-size: 1.6em;
     text-align: left;
     align-items: center;
-    line-height: 3rem; }
+    line-height: 2rem;
+    padding-right: 1rem; }
 
 /* Responsive */
 @media screen and (max-width: 720px) {
@@ -185,7 +186,8 @@ main {
     line-height: 3rem; }
   main .text__tour {
     font-size: 1.6em;
-    display: flex; }
+    display: flex;
+    align-items: center; }
   main .caja__texto {
     background-color: black;
     border-radius: 0.6em; }
@@ -332,3 +334,5 @@ main {
   main .title__all {
     text-transform: uppercase;
     font-weight: 900; }
+  main .form {
+    font-size: 1.6em; }
